Ensure that the PlzNavigate code path removes pending NavigationEntrys if the navigation is cancelled.

For the old code paths, this is done by NavigatorImpl::DidFailProvisionalLoadWithError. So copy that call.

This fixes
NewTabPageTest#testUrlFocusAnimationsEnabledOnFailedLoad

BUG=699387
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation
R=cblume@chromium.org, creis@chromium.org

Review-Url: https://codereview.chromium.org/2768933004 .
Cr-Commit-Position: refs/heads/master@{#459473}

Former-commit-id: adbac71e30fdf997eb5b543da155b08542f88c71